<resources>
    <string name="back">이전</string>
    <string name="my_page">마이페이지</string>
    <string name="date_file">날짜별 생성 파일 확인</string>
    <string name="setting">설정</string>
    <string name="fairy_tale">동화</string>
    <string name="home">홈</string>
    <string name="music">음악</string>
    <string name="go_to_the_my_page">MY</string>
    <string name="id">계정</string>
    <string name="id_information">사용자 정보</string>
    <string name="application_setting">어플 설정</string>
    <string name="out">회원 탈퇴</string>
    <string name="Input">입력하세요</string>
    <string name="Username_title">이름</string>
    <string name="Birthday_input">YYYY-MM-DD형식으로 입력해주세요.</string>
    <string name="Email_head">moms_ear</string>
    <string name="Name">홍길동</string>
    <string name="Birthday_title">생년월일</string>
    <string name="PN_title">전화번호</string>
    <string name="Register_title">회원가입</string>
    <string name="PN_middle_input">1234</string>
    <string name="PN_end_input">5678</string>
    <string name="Email_title">ID(E-Mail)</string>
    <string name="Finish_button">완료</string>
    <string name="PW_title">비밀번호</string>
    <string name="PW_input">비밀번호를 입력해주세요.</string>
    <string name="PWcheck_title">비밀번호 확인</string>
    <string name="PWcheck_input">비밀번호를 재입력해주세요.</string>
    <string name="Login_ID_input">ID(E-Mail)</string>
    <string name="Login_PW_input">PASSWORD</string>
    <string name="Login_button">LOGIN</string>
    <string name="find_ID_title">ID(E-Mail)찾기</string>
    <string name="find_PW_button">비밀번호 찾기</string>
    <string name="find_IDPW_title">ID/PW찾기</string>
    <string name="find_PW_title">비밀번호 찾기</string>
    <string name="find_ID_button">ID(E-Mail) 찾기</string>
    <string name="app_name">FInal_Diary</string>
    <string name="list">목록</string>
    <string name="go_to_calendar">달력</string>
    <string name="due_date">출산 디데이</string>
    <string name="save">저장</string>
    <string name="temp_save">임시저장</string>
    <string name="today">오늘의 하루</string>
    <string name="datetime">날짜,시간</string>
    <string name="text_input_hint">텍스트 입력</string>
    <string name="text_input_hint_1">텍스트 입력</string>
    <string name="text_input_hint_2">텍스트 입력</string>
    <string name="character">캐릭터</string>
    <string name="button_text_home">홈</string>
    <string name="today_music">오늘의 음악</string>
    <string name="music_name">음악</string>
    <string name="music_create">음악 생성하기</string>
    <string name="today_fairytale">오늘의 동화</string>
    <string name="create_fairy_tale">동화 생성하기</string>
    <string name="description_account_button">계정 버튼</string>
    <string name="description_back_button">이전 버튼</string>
    <string name="music_play_button">음악 재생</string>
    <string name="read_fairy_tale">동화 읽기</string>
    <string name="calendar_button">달력 버튼</string>

    <string name="INPUT_ID_BOX">ID</string>
    <string name="INPUT_PW_BOX">PW</string>
    <string name="LOGIN_BTN">LOGIN</string>
    <string name="SIGNUP_BTN">SIGNUP</string>
    <string name="Gender_title">성별</string>
    <string name="Gender">남,녀</string>

</resources>
