<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start_Login">

    <!-- 이전 버튼   -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#D3D3D3"
        android:text="@string/back"
        android:textColor="#111111"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <!-- 회원가입 타이틀   -->
    <TextView
        android:id="@+id/Register_Title"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:text="@string/Register_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <!-- 유저 이름 입력에 대한 타이틀   -->
    <TextView
        android:id="@+id/Register_name"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:text="@string/Username_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />


    <TextView
        android:id="@+id/register_name"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:text="@string/Gender_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/Input_name"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/register_ID"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:text="@string/PN_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />



    <EditText
        android:id="@+id/Input_PhoneNum"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/PN_end_input"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/Register_BirthDay"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:text="@string/Birthday_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <!-- 유저 생일 입력 박스-->
    <EditText
        android:id="@+id/Input_Birthday"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/Birthday_input"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <!-- 유저 ID(이메일) 입력 타이틀-->
    <TextView
        android:id="@+id/Register_ID"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:text="@string/Email_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />


    <EditText
        android:id="@+id/input_ID_1"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/Email_head"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/Gender"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:hint="@string/Gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/register_PW"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:text="@string/PW_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <!-- 비밀번호 입력 박스-->
    <EditText
        android:id="@+id/PW_input"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/PW_input"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <!-- 비밀번호확인 입력 타이틀-->
    <TextView
        android:id="@+id/register_PW_check"
        android:layout_width="86dp"
        android:layout_height="19dp"
        android:text="@string/PWcheck_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <!-- 비밀번호확인 입력 박스-->
    <EditText
        android:id="@+id/PWcheck_input"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/PWcheck_input"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <!-- 회원가입 완료 버튼 -->
    <Button
        android:id="@+id/signup_button"
        android:layout_width="142dp"
        android:layout_height="75dp"
        android:text="@string/Finish_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />




</androidx.constraintlayout.widget.ConstraintLayout>