<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAE5E5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 로고 이미지 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#F8E3E3"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#CCADAD"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 마이 페이지 텍스트 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/my_page"
            android:textColor="#000000"
            android:textSize="36sp" />

        <!-- 날짜별 생성 파일 확인 버튼 -->
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#D3D3D3"
            android:text="@string/date_file"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- 설정 버튼 -->
        <Button
            android:id="@+id/settingsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:backgroundTint="#D3D3D3"
            android:text="@string/setting"
            android:textColor="#111111"
            android:textStyle="bold" />
    </LinearLayout>



    <!-- 하단 메뉴 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- 동화 버튼 -->
        <Button
            android:id="@+id/fairyTaleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="320dp"
            android:text="@string/fairy_tale"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- 홈 버튼 -->
        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="320dp"
            android:text="@string/home"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- 음악 버튼 -->
        <Button
            android:id="@+id/musicButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="100dp"
            android:text="@string/music"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- MY 버튼 -->
        <Button
            android:id="@+id/myPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="100dp"
            android:text="@string/go_to_the_my_page"
            android:textColor="#111111"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>