<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">


    <!-- Toolbar 영역 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="#FDE8E8"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- 로고 이미지 -->
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <!-- 계정 버튼 -->
        <ImageButton
            android:id="@+id/btn_account"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/description_account_button"
            android:src="@drawable/user" />

        <!-- 뒤로 가기 버튼 -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/description_back_button"
            android:src="@drawable/back" />
    </androidx.appcompat.widget.Toolbar>

    <!--동화 이미지-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="438dp"
        android:layout_weight="1"
        android:background="#CEAEAE"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="400dp"
            android:layout_height="507dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <!-- 하단 메뉴 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- 동화 버튼 -->
        <Button
            android:id="@+id/fairyTaleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="320dp"
            android:text="@string/fairy_tale"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- 홈 버튼 -->
        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="320dp"
            android:text="@string/home"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- 음악 버튼 -->
        <Button
            android:id="@+id/musicButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="100dp"
            android:text="@string/music"
            android:textColor="#111111"
            android:textStyle="bold" />

        <!-- MY 버튼 -->
        <Button
            android:id="@+id/myPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#D3D3D3"
            android:maxWidth="100dp"
            android:text="@string/go_to_the_my_page"
            android:textColor="#111111"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>